--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -71,14 +71,27 @@
     }
 
     .comment-marche {
+        background-color:$fifth-color ;
         .explain-text-color {
             color: $primary-color;
-            font-weight: bold;
         }
 
-        .border-bottom-color {
-            border-bottom: solid $primary-color;
-            border-bottom-width: 14px;
+        iframe {
+            width: 300px;
+            height: 169px;
+            @include media-breakpoint-up(sm) {
+                width: 360px;
+                height:202px;
+            }
+            @include media-breakpoint-up(lg) {
+                width: 480px;
+                height:270px;
+            }
+        }
+
+        img {
+            width: 35px;
+            height: auto;
         }
     }
 }
