--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -129,26 +129,51 @@
             </div>
         </section>
 
+        <section class="logos bg-white pt-3 pb-3 pt-lg-5 pb-lg-5">
+            <div class="row text-center">
+                <div class="col">
+                    <img src="{{ asset('images/logos-2vie.png') }}"
+                         alt="Offre une 2ème vie à ton tél">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/logos-region.png') }}"
+                         alt="Collecté dans ta région">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/logos-garantie.png') }}"
+                         alt="Garantie 12 mois minimum">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/logos-origine.png') }}"
+                         alt="Reconditionné avec les pièces d'origine">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/logos-neuf.png') }}"
+                         alt="Qualité fonctionnelle et esthétique proche du neuf !">
+                </div>
+            </div>
+        </section>
+
+        <section class="photography pt-3 pb-3">
+            <div class="row text-center">
+                <div class="col">
+                    <img src="{{ asset('images/photo-1.png') }}"
+                         alt="Smartphones contrôlés et certifiés localement">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/photo-2.png') }}"
+                         alt="Emploi local et énergie étudiante">
+                </div>
+                <div class="col">
+                    <img src="{{ asset('images/photo-3.png') }}"
+                         alt="Sécurité et confidentialité">
+                </div>
+            </div>
+        </section>
+
         <section class="combien-vaut mt-4">
-            <h2 class="primary-title">Combien vaut ton mobile ?</h2>
-            <div class="row justify-content-center p-2">
-                <div class="col-8 text-center">
-                    <p class="explain-text">A l'aide de l'application <span class="font-weight-bold">BipBip Test</span>,<br>
-                        ton mobile sera évalué avec expertise pour donner le meilleur de lui-même</p>
-                </div>
-            </div>
-            <div class="row justify-content-center p-5">
-                <div class="col col-lg-3 text-center">
-                    <a href="{{ path('home') }}" class="primary-button">
-                        Je télécharge l'appli
-                    </a>
-                </div>
-                <div class="col col-lg-3 text-center p-1">
-                    <a href="{{ path('estimations_new') }}" class="primary-button">
-                        Estimation en ligne
-                    </a>
-                </div>
-            </div>
+            <h2 class="primary-title">La seconde vie selon</h2>
+
             <div class="row justify-content-center m-0 p-0 pt-5 pb-5 bg-secondary-color">
                 <div class="col-6 col-md-4 col-xl-3 text-center">
                     <img src="{{ asset('images/perso-bipbip.png') }}" alt="Téléphone" class="img-phone">
