--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -116,18 +116,52 @@
             @include media-breakpoint-up(md) {
                 font-size: 2.7rem;
             }
+            @include media-breakpoint-up(lg) {
+                font-size: 3.1rem;
+            }
         }
 
         .recolted-text {
             margin-top: -1.3rem;
             font-size: 0.8rem;
             font-weight: 600;
+            @include media-breakpoint-up(md) {
+                font-size: 1.3rem;
+            }
         }
 
         .img-phone {
             margin-top: -40%;
             margin-left: 20px;
             height: 180px;
+            @include media-breakpoint-up(md) {
+                height: 220px;
+            }
+        }
+    }
+
+    .logos-bas {
+        img {
+            height: 50px;
+            width: auto;
+            margin-bottom: 5px;
+        }
+
+        p {
+            font-size: 0.8rem;
+            font-weight: 600;
+            @include media-breakpoint-up(md) {
+                font-size: 1.3rem;
+            }
+        }
+
+        .small-text {
+            margin-top: -1rem;
+            font-size: 0.6rem;
+            @include media-breakpoint-up(md) {
+                font-size: 0.8rem;
+                font-weight: 100;
+            }
         }
     }
 }
