--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -131,27 +131,32 @@
             </div>
         </section>
 
-        <section class="logos bg-white pt-3 pb-3 pt-lg-5 pb-lg-5">
+        <section class="logos bg-white pt-3 pb-2 pt-lg-5 pb-lg-4">
             <div class="row text-center">
                 <div class="col">
-                    <img src="{{ asset('images/logos-2vie.png') }}"
+                    <img src="{{ asset('images/5logos-2vie.png') }}"
                          alt="Offre une 2ème vie à ton tél">
+                    <p>Offre une 2ème vie à ton tél</p>
                 </div>
                 <div class="col">
-                    <img src="{{ asset('images/logos-region.png') }}"
+                    <img src="{{ asset('images/5logos-region.png') }}"
                          alt="Collecté dans ta région">
+                    <p>Collecté dans ta région</p>
                 </div>
                 <div class="col">
-                    <img src="{{ asset('images/logos-garantie.png') }}"
+                    <img src="{{ asset('images/5logos-garantie.png') }}"
                          alt="Garantie 12 mois minimum">
+                    <p>Garantie 12 mois minimum</p>
                 </div>
                 <div class="col">
-                    <img src="{{ asset('images/logos-origine.png') }}"
+                    <img src="{{ asset('images/5logos-origine.png') }}"
                          alt="Reconditionné avec les pièces d'origine">
+                    <p>Reconditionné avec les pièces d'origine</p>
                 </div>
                 <div class="col">
-                    <img src="{{ asset('images/logos-neuf.png') }}"
+                    <img src="{{ asset('images/5logos-neuf.png') }}"
                          alt="Qualité fonctionnelle et esthétique proche du neuf !">
+                    <p>Qualité fonctionnelle et esthétique proche du neuf !</p>
                 </div>
             </div>
         </section>
