--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     </head>
     <body>
     {% block header %}
-        <header>
+        <header class="container-fluid">
             <div class="row pb-3 bg-white">
                 <div class="col-8 col-md-6 pt-3 text-center">
                     <a href="{{ path('home') }}" class="logo-bipbip pl-1"><img src="{{ asset('/images/logo-bipbip.png') }}"
@@ -101,7 +101,7 @@
 
         {% block footer %}
         <footer>
-            <h2 class="primary-title mt-4">Tu en veux plus ?</h2>
+            <h2 class="primary-title">Tu en veux plus ?</h2>
             <div class="row justify-content-center mb-4">
                 <div class="col-2 col-md-1 text-center">
                     <a href="#" target="_blank" title="Page Facebook">
@@ -119,7 +119,10 @@
                     </a>
                 </div>
             </div>
-            <div class="row links-footer m-0 p-4">
+            <div class="row links-footer justify-content-center pt-3 m-0">
+                <img src="{{ asset('images/bipbip-footer.png') }}"alt="BipBip">
+            </div>
+            <div class="row links-footer p-3 m-0">
                 <div class="col mb-4">
                     <div class="font-weight-bold pb-2">
                         A propos de BipBip<br>
