--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -55,16 +55,18 @@
         </div>
         </section>
 
-        <section class="comment-marche mt-3 pb-3">
-            <h2 class="primary-title">Comment ça marche ?</h2>
-            <div class="row">
+        <section>
+            <div class="row comment-marche mt-3 pb-3">
+                <div class="col-12">
+                    <h2 class="primary-title">Comment ça marche ?</h2>
+                </div>
                 <div class="col-12 col-md-6 text-center">
                     <iframe src="https://www.youtube.com/embed/JDeWXwma_Z4"
                             frameborder="0"
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                 </div>
-                <div class="col-12 col-md-6 font-weight-bold">
+                <div class="col-12 col-md-6">
                     <div class="row align-items-center p-1">
                         <div class="col-2 text-center">
                             <img src="{{ asset('images/1.png') }}" alt="1">
@@ -131,29 +133,29 @@
             </div>
         </section>
 
-        <section class="logos bg-white pt-3 pb-2 pt-lg-5 pb-lg-4">
-            <div class="row text-center">
-                <div class="col">
+        <section>
+            <div class="logos bg-white pt-3 pb-2 pt-lg-5 pb-lg-4 row text-center justify-content-center">
+                <div class="col-4 col-sm">
                     <img src="{{ asset('images/5logos-2vie.png') }}"
                          alt="Offre une 2ème vie à ton tél">
                     <p>Offre une 2ème vie à ton tél</p>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm">
                     <img src="{{ asset('images/5logos-region.png') }}"
                          alt="Collecté dans ta région">
                     <p>Collecté dans ta région</p>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm">
                     <img src="{{ asset('images/5logos-garantie.png') }}"
                          alt="Garantie 12 mois minimum">
                     <p>Garantie 12 mois minimum</p>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm">
                     <img src="{{ asset('images/5logos-origine.png') }}"
                          alt="Reconditionné avec les pièces d'origine">
                     <p>Reconditionné avec les pièces d'origine</p>
                 </div>
-                <div class="col">
+                <div class="col-4 col-sm">
                     <img src="{{ asset('images/5logos-neuf.png') }}"
                          alt="Qualité fonctionnelle et esthétique proche du neuf !">
                     <p>Qualité fonctionnelle et esthétique proche du neuf !</p>
@@ -161,8 +163,8 @@
             </div>
         </section>
 
-        <section class="photography pt-3 pb-3 pt-md-0 pb-md-0">
-            <div class="row text-center pr-2 align-content-center pl-md-5 p-md-5">
+        <section>
+            <div class="photography row text-center pr-2 align-content-center pl-md-5 p-md-5 pt-3 pb-3 pt-md-0 pb-md-0">
                 <div class="col">
                     <img src="{{ asset('images/photo-1.png') }}"
                          alt="Smartphones contrôlés et certifiés localement">
@@ -198,17 +200,17 @@
 
         <section class="logos-bas">
             <div class="row justify-content-center p-3">
-                <div class="col-4 col-md-3 text-center">
+                <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-economique.png') }}" alt="Economique">
                     <p>Economique</p>
                     <p class="small-text">Gagne facilement de l'argent en faisant une bonne action</p>
                 </div>
-                <div class="col-4 col-md-3 text-center">
+                <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-profitable.png') }}" alt="Profitable">
                     <p>Profitable</p>
                     <p class="small-text">Vends, achète et recycle en toute sécurité avec notre partenaire Pumkin</p>
                 </div>
-                <div class="col-4 col-md-3 text-center">
+                <div class="col-6 col-sm col-md-3 text-center">
                     <img src="{{ asset('images/logos-environnemental.png') }}" alt="Environnemental">
                     <p>Environnemental</p>
                     <p class="small-text">Une bonne action pour ta planète</p>
