--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                                     <li class="primary-title-menu"><a href="{{ path("qui-sommes-nous") }}" title="Description Bip Bip">Notre mission</a></li>
                                     <li class="primary-title-menu"><a href="{{ path("team") }}" title="Description Bip Bip">Notre team</a></li>
                                     <li class="primary-title-menu-color pt-2">#Je suis BipBip</li>
-                                    <li class="primary-title-menu"><a href="{{ path("new_estimation") }}" title="Estimer son téléphone">Vends ton tél</a></li>
+                                    <li class="primary-title-menu"><a href="{{ path("vends") }}" title="Vends ton téléphone">Vends ton tél</a></li>
                                     <li class="primary-title-menu"><a href="{{ path("boutique") }}" title="Acheter un téléphone">Achète un BipBip</a></li>
                                     <li class="primary-title-menu-color pt-2">BipBip a besoin de toi</li>
                                     <li class="primary-title-menu"><a href="{{ path("show_collect") }}" title="Les points de collecte">Collecteurs / bippeurs</a></li>
