Update of text in burger menu, and place new empty pages for links

--- a/templates/infos/bipbip.html.twig
+++ b/templates/infos/bipbip.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Notre mission{% endblock %}
+{% block title %}Notre solution{% endblock %}
 
 {% block body %}
     <main class="container">
