--- a/templates/infos/livraisons.html.twig
+++ b/templates/infos/livraisons.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Recrutement - BipBip{% endblock %}
+{% block title %}Livraisons et garanties - BipBip{% endblock %}
 
 {% block body %}
     <main class="container">
         <div class="row">
             <div class="col-12 col-lg-8 mx-auto form p-4">
-                <h1 class="primary-title">Recrutement</h1>
+                <h1 class="primary-title">Livraisons et garanties</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices interdum maximus. Vivamus sagittis ex turpis, nec rhoncus massa dignissim sit amet. Aliquam rhoncus nulla massa, a varius elit venenatis et. Proin interdum dictum rhoncus. Donec quis augue vel diam viverra venenatis vitae et mi. Duis mollis odio mi, vel fermentum ligula semper sit amet. Vestibulum rhoncus massa a laoreet sollicitudin. Maecenas interdum neque turpis, vitae fermentum mi ultrices ac. Cras nec augue tellus. Nullam tincidunt est vel erat efficitur, non fringilla risus bibendum. Nunc leo nunc, pellentesque mollis ultricies sit amet, dictum nec ipsum. Suspendisse dui dui, ultricies vel eleifend et, tincidunt ut purus. Nullam neque sapien, blandit in ligula id, lobortis viverra nisi. Nulla lobortis nibh leo, maximus iaculis massa pellentesque volutpat. Maecenas mi ligula, porta nec efficitur vel, euismod non nisl. Sed leo sem, ultricies sit amet ligula et, efficitur convallis eros.</p>
                 <p>Sed mattis ac turpis elementum congue. Morbi sit amet ipsum a eros vulputate sollicitudin ac ac tortor. Pellentesque id magna purus. Etiam id luctus quam. Praesent quis nulla lacus. Aliquam sit amet neque sagittis, tristique eros eget, pretium lorem. Maecenas ac sodales mauris. Nullam nisi nisl, maximus ac ultrices vel, faucibus et nisl. Proin laoreet, turpis ut posuere vestibulum, eros risus convallis erat, a malesuada lacus leo a nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse potenti.</p>
             </div>
