--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -193,7 +193,9 @@
                 </div>
                 <div class="col-8 col-md-7 text-center">
                     <p class="recolted-number pt-2">1520</p>
-                    <p class="recolted-text">téléphones<br>collectés<br> par nos bippers</p>
+                    <p class="recolted-text">téléphones<br>collectés<br> par nos
+                        <a href="#">bippers</a>
+                    </p>
                 </div>
             </div>
         </section>
